doc (auth) : add swago documentation on auth handlers
